--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
     font-size: 25px;
 }
 
-a:link{
+.links:link{
     display: flexbox;
     margin: 40px;
     text-decoration: none;
@@ -59,16 +59,13 @@ a:link{
     color: azure;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     transition: .8s;
-    /* font-size: 20px */
 }
-a:visited{
+.links:visited{
     color: lightcyan;
 }
 
-a:hover{
-    /* transform: scale(1.3); */
+.links:hover{
     color: midnightblue;
-    /* text-shadow: 3px 1px 0px  #9870d8; */
 }
 .img{
     padding-top: 100px;
